--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "exclude": ["node_modules", "**/*.spec.ts"],
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
