--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "clean": "rimraf dist",
     "prebuild": "npm install",
-    "build": "tsc --incremental",
+    "build": "npm run clean && tsc --build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "seed": "ts-node -r tsconfig-paths/register seed.ts",
     "start": "nest start",
@@ -67,6 +68,7 @@
     "husky": "^9.1.7",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
