--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]},
+      "@/*": ["src/*"]
+   },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
