--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.19",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^8.1.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
