--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^8.1.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-google-oauth20": "^2.0.16",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -43,6 +45,8 @@
     "multer": "^2.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
