--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "@types/bcrypt": "^5.0.2",
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@vitalets/google-translate-api": "^9.2.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "csv-parse": "^5.6.0",
+    "google-translate-open-api": "^1.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.10.1",
