--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "get-warehouse-ref": "ts-node -r tsconfig-paths/register src/nova-poshta/get-warehouse-ref.ts",
+    "codebase-map": "node scripts/generate-codebase-map.js",
+    "codebase-pdf": "node scripts/generate-codebase-pdf.js"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.4.18",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.4.18",
@@ -37,7 +42,9 @@
     "@types/passport-facebook": "^3.0.3",
     "@types/passport-google-oauth20": "^2.0.16",
     "@vitalets/google-translate-api": "^9.2.1",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "csv-parse": "^5.6.0",
@@ -46,15 +53,19 @@
     "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.10.1",
     "multer": "^2.0.1",
+    "nest-winston": "^1.10.2",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "puppeteer": "^24.15.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.7.1",
