--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test-optimization": "node test-optimization.js"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.4.18",
